errors with css file and correction of bootstrap elements being out of place

--- a/style.css
+++ b/style.css
@@ -20,3 +20,6 @@ h1 {
     height: 20vh;
     width: 20vh;
 }
+.guesslist{
+    font-size: 1.5rem;
+}
